# docxx

./: LICENSE  README.md  index.md
Test/: CMakeLists.txt  main.cpp
Test/build_vc/: Test.sln  Test.vcxproj  file.docx
docxx/: CMakeLists.txt  docxx.cpp  docxx.hpp  utils.cpp  utils.hpp
docxx/build_vc/: docxx.sln  docxx.vcxproj
